--- a/src/app/pages/sign-up/sign-up.component.html
+++ b/src/app/pages/sign-up/sign-up.component.html
@@ -50,7 +50,7 @@
                     </div>
                 </ion-row>
                 <ion-row class="button-row">
-                    <ion-button class="button" (click)="submit()">
+                    <ion-button class="button" (click)="createFirebaseUser()">
                         Sign up
                     </ion-button>
                 </ion-row>
