--- a/src/app/pages/dashboard/dashboard.component.scss
+++ b/src/app/pages/dashboard/dashboard.component.scss
@@ -4,6 +4,8 @@
         background-color: #a6a998;
         height: 20vh;
         padding-top: 10px;
+        border-radius: 0 0 5px 5px;
+        border-bottom: 1px solid #898979;
     }
 
     .profile-row {}
@@ -17,16 +19,17 @@
 
     .item {
         width: 90vw;
-        height: 20vw;
+        height: 15vw;
         background-color: #d4cbbe;
         border-radius: 5px;
         margin: 10px 0;
         display: flex;
         justify-content: center;
         align-items: center;
-        color: white;
+        color: rgb(129, 122, 105);
         font-weight: 700;
-        font-size: 24px;
+        font-size: 18px;
+        border: 1px solid rgb(171, 162, 141);
     }
 
     ion-col {
