--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -4,3 +4,33 @@
 
 /* To quickly generate your own theme, check out the color generator */
 /* https://ionicframework.com/docs/theming/color-generator */
+
+
+:root {
+    /* Basic Colors */
+    --ion-color-primary: #B8926A;
+    --ion-color-primary-rgb: 56, 128, 255;
+    --ion-color-primary-contrast: #ffffff;
+    --ion-color-primary-contrast-rgb: 255, 255, 255;
+    --ion-color-primary-shade: #3171e0;
+    --ion-color-primary-tint: #4c8dff;
+
+    --ion-color-secondary: #0cd1e8;
+    --ion-color-secondary-rgb: 12, 209, 232;
+    --ion-color-secondary-contrast: #ffffff;
+    --ion-color-secondary-contrast-rgb: 255, 255, 255;
+    --ion-color-secondary-shade: #0bb8cc;
+    --ion-color-secondary-tint: #24d6ea;
+
+    /* Background and Text Colors */
+    --ion-background-color: #ffffff;
+    --ion-text-color: #000000;
+
+    /* Other Colors */
+    --ion-color-success: #10dc60;
+    --ion-color-warning: #ffce00;
+    --ion-color-danger: #f04141;
+
+    /* Custom Fonts */
+    --ion-font-family: 'Helvetica Neue', Arial, sans-serif;
+}
