--- a/src/app/baby-tracking/pages/dashboard/content/solids-tracking/solids-tracking.component.html
+++ b/src/app/baby-tracking/pages/dashboard/content/solids-tracking/solids-tracking.component.html
@@ -1,64 +1,55 @@
 <ion-content>
-    <div class="container">
-        <div class="header">
-            <ion-icon routerLink="../" class="arrow-left" name="chevron-back-outline"></ion-icon>
-            <div>
-                Add Solids
-            </div>
-        </div>
-        <hr>
-        <ng-container *ngIf="solidsForm">
-            <form [formGroup]="solidsForm">
-                <ion-row class="sleep-time">
-                    <ion-button id="startDate">
-                        <ion-col>
-                            Start time:
-                        </ion-col>
-                        <ion-col *ngIf="!getFormControl('startTime')">
-                            <u>Set time</u>
-                        </ion-col>
-                        <ion-col *ngIf="getFormControl('startTime')">
-                            <u>{{getFormControl('startTime') | date:'shortTime'}}</u>
-                        </ion-col>
-                    </ion-button>
-                    <ion-popover trigger="startDate" size="cover">
-                        <ng-template>
-                            <ion-datetime formControlName="startTime" displayFormat="MMM DD, YYYY HH:mm"
-                                pickerFormat="MMM DD, YYYY HH:mm" presentation="time" locale="sl-SI"></ion-datetime>
-                        </ng-template>
-                    </ion-popover>
-                </ion-row>
-                <ion-row>
-                    <ion-item>
-                        <ion-select label="Food" [multiple]="true" formControlName="food">
-                            <ion-select-option *ngFor="let food of foodItems"
-                                [value]="food.id">{{food.description}}</ion-select-option>
-                        </ion-select>
-                    </ion-item>
-                </ion-row>
-                <ion-row>
-                    <ion-item>
-                        <ion-select label="Reaction" [multiple]="true" formControlName="reactions">
-                            <ion-select-option *ngFor="let reaction of reactions"
-                                [value]="reaction.id">{{reaction.description}}</ion-select-option>
-                        </ion-select>
-                    </ion-item>
-                </ion-row>
-                <ion-row class="input-row">
-                    <ion-input type="text" placeholder="Notes" formControlName="notes"> </ion-input>
-                </ion-row>
-            </form>
-        </ng-container>
-        <ng-container>
-            <div class="save">
-                <div class="save-inner-container">
-                    <ion-row class="sleep-time">
-                        <ion-button (click)="save()">
-                            Save
-                        </ion-button>
-                    </ion-row>
-                </div>
-            </div>
-        </ng-container>
+  <div class="container">
+    <div class="header">
+      <ion-icon routerLink="../" class="arrow-left" name="chevron-back-outline"></ion-icon>
+      <div>Add Solids</div>
     </div>
+    <hr />
+    <ng-container *ngIf="solidsForm">
+      <form [formGroup]="solidsForm">
+        <ion-row class="sleep-time">
+          <ion-button id="startDate">
+            <ion-col> Start time: </ion-col>
+            <ion-col *ngIf="!getFormControl('startTime')">
+              <u>Set time</u>
+            </ion-col>
+            <ion-col *ngIf="getFormControl('startTime')">
+              <u>{{ getFormControl('startTime') | date : 'shortTime' }}</u>
+            </ion-col>
+          </ion-button>
+          <ion-popover trigger="startDate" size="cover">
+            <ng-template>
+              <ion-datetime formControlName="startTime" displayFormat="MMM DD, YYYY HH:mm" pickerFormat="MMM DD, YYYY HH:mm" presentation="time" locale="sl-SI"></ion-datetime>
+            </ng-template>
+          </ion-popover>
+        </ion-row>
+        <ion-row>
+          <ion-item>
+            <ion-select label="Food" [multiple]="true" formControlName="food">
+              <ion-select-option *ngFor="let food of foodItems" [value]="food.id">{{ food.description }}</ion-select-option>
+            </ion-select>
+          </ion-item>
+        </ion-row>
+        <ion-row>
+          <ion-item>
+            <ion-select label="Reaction" [multiple]="true" formControlName="reactions">
+              <ion-select-option *ngFor="let reaction of reactions" [value]="reaction.id">{{ reaction.description }}</ion-select-option>
+            </ion-select>
+          </ion-item>
+        </ion-row>
+        <ion-row class="input-row">
+          <ion-input type="text" placeholder="Notes" formControlName="notes"> </ion-input>
+        </ion-row>
+      </form>
+    </ng-container>
+    <ng-container>
+      <div class="save">
+        <div class="save-inner-container">
+          <ion-row class="sleep-time">
+            <ion-button (click)="save()"> Save </ion-button>
+          </ion-row>
+        </div>
+      </div>
+    </ng-container>
+  </div>
 </ion-content>
