--- a/src/app/baby-tracking/shared/circular-button/circular-button.component.scss
+++ b/src/app/baby-tracking/shared/circular-button/circular-button.component.scss
@@ -1,29 +1,29 @@
 .circular-button {
-    width: 150px;
-    height: 150px;
-    border-radius: 50%;
-    background-color: #A6A998;
-    color: #fff;
-    font-size: 18px;
-    cursor: pointer;
+  width: 150px;
+  height: 150px;
+  border-radius: 50%;
+  background-color: #a6a998;
+  color: #fff;
+  font-size: 18px;
+  cursor: pointer;
 }
 
 .button-wrapper {
-    width: 170px;
-    height: 170px;
-    border-radius: 50%;
-    border: 2px dashed rgba(164, 145, 142, 0.5);
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  width: 170px;
+  height: 170px;
+  border-radius: 50%;
+  border: 2px dashed rgba(164, 145, 142, 0.5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 ion-icon {
-    font-size: 24px;
+  font-size: 24px;
 }
 
 .center-content {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
