--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,71 +1,57 @@
-<ion-content>
-    <div class="container">
-        <div class="header">
-            Sign in
-        </div>
-        <hr>
-        <div class="welcome-container">
-            <ion-row class="welcome">
-                Welcome
-            </ion-row>
-            <ion-row>
-                Excited to have you here
-            </ion-row>
-        </div>
-        <form [formGroup]="loginForm">
-            <div>
-                <ion-row class="input-row">
-                    <ion-input placeholder="Email Address" formControlName="email"></ion-input>
-                    <div class="alert" *ngIf="email.hasError('email') && (email.dirty || email.touched)">
-                        Please enter a valid email address.
-                    </div>
-                </ion-row>
-                <ion-row class="input-row">
-                    <ion-input type="password" placeholder="Password" formControlName="password"> </ion-input>
-                    <div class="alert" *ngIf="password.hasError('required') && (password.dirty || password.touched)">
-                        Password is required.
-                    </div>
-                    <div class="alert" *ngIf="password.hasError('minlength') && (password.dirty || password.touched)">
-                        Password must be at least 8 characters long.
-                    </div>
-                    <div class="alert" *ngIf="password.hasError('pattern') && (password.dirty || password.touched)">
-                        Password must include at least one lowercase letter, one uppercase letter, one digit, and one
-                        special character.
-                    </div>
-                </ion-row>
-                <ion-row class="button-row">
-                    <ion-button class="button" (click)="SignIn()">
-                        Sign in
-                    </ion-button>
-                </ion-row>
-                <ion-row>
-                    Forgot Password?
-                </ion-row>
-                <div class="space"></div>
-                <ion-row>
-                    Or continue with
-                </ion-row>
-                <ion-row>
-                    <ion-col>
-                        <ion-button>
-                            <ion-icon name="logo-apple"></ion-icon>
-                        </ion-button>
-                    </ion-col>
-                    <ion-col>
-                        <ion-button>
-                            <ion-icon name="logo-google"></ion-icon>
-                        </ion-button>
-                    </ion-col>
-                    <ion-col>
-                        <ion-button>
-                            <ion-icon name="logo-facebook"></ion-icon>
-                        </ion-button>
-                    </ion-col>
-                </ion-row>
-                <ion-row>
-                    Don't have an account? <a routerLink="/sign-up"> &nbsp; Sign Up</a>
-                </ion-row>
-            </div>
-        </form>
+<ion-content class="ion-padding">
+  <div class="login-container">
+    <div class="welcome-container">
+      <div class="welcome-image-container">
+        <ion-img src="assets/Welcome_Header_Img.png" alt="Welcome Image" class="welcome-image"></ion-img>
+      </div>
     </div>
+    <form [formGroup]="loginForm">
+      <div class="form-container">
+        <ion-row class="input-row">
+          <ion-input placeholder="email" formControlName="email"></ion-input>
+          <div class="alert" *ngIf="email.hasError('email') && (email.dirty || email.touched)">Please enter a valid email address.</div>
+        </ion-row>
+        <ion-row class="input-row">
+          <ion-input type="password" placeholder="password" formControlName="password"> </ion-input>
+          <div class="alert" *ngIf="password.hasError('required') && (password.dirty || password.touched)">Password is required.</div>
+          <div class="alert" *ngIf="password.hasError('minlength') && (password.dirty || password.touched)">Password must be at least 8 characters long.</div>
+          <div class="alert" *ngIf="password.hasError('pattern') && (password.dirty || password.touched)">
+            Password must include at least one lowercase letter, one uppercase letter, one digit, and one special character.
+          </div>
+        </ion-row>
+      </div>
+      <div class="actions-container">
+        <ion-row>
+          <ion-button class="sign-button" (click)="SignIn()"> Sign in </ion-button>
+        </ion-row>
+        <ion-row> Forgot Password? </ion-row>
+
+        <!-- <ion-row> Or continue with </ion-row> -->
+        <!-- <ion-row>
+          <ion-col>
+            <ion-button>
+              <ion-icon name="logo-apple"></ion-icon>
+            </ion-button>
+          </ion-col>
+          <ion-col>
+            <ion-button>
+              <ion-icon name="logo-google"></ion-icon>
+            </ion-button>
+          </ion-col>
+          <ion-col>
+            <ion-button>
+              <ion-icon name="logo-facebook"></ion-icon>
+            </ion-button>
+          </ion-col>
+        </ion-row> -->
+      </div>
+    </form>
+  </div>
 </ion-content>
+<ion-footer>
+  <ion-toolbar>
+    <ion-row>
+      <ion-col class="footer-container"> Don't have an account? <a routerLink="/get-to-know">Sign Up</a> </ion-col>
+    </ion-row>
+  </ion-toolbar>
+</ion-footer>
