--- a/src/app/baby-tracking/pages/dashboard/content/food-tracking/food-tracking.component.html
+++ b/src/app/baby-tracking/pages/dashboard/content/food-tracking/food-tracking.component.html
@@ -1,4 +1,4 @@
-<ion-content>
+<ion-content fullscreen>
   <div class="container">
     <div class="header">
       <ion-icon routerLink="../" class="arrow-left" name="chevron-back-outline"></ion-icon>
@@ -23,7 +23,7 @@
             <u>Set time</u>
           </ion-col>
           <ion-col *ngIf="startDate">
-            <u>{{ startDate | date : 'shortTime' }}</u>
+            <u>{{ startDate | date: 'shortTime' }}</u>
           </ion-col>
         </ion-button>
         <ion-popover trigger="startDate" size="cover">
@@ -39,7 +39,7 @@
             <u>Set time</u>
           </ion-col>
           <ion-col *ngIf="endDate">
-            <u>{{ endDate | date : 'shortTime' }}</u>
+            <u>{{ endDate | date: 'shortTime' }}</u>
           </ion-col>
         </ion-button>
         <ion-popover trigger="endDate" size="cover">
