--- a/src/app/settings/settings.component.html
+++ b/src/app/settings/settings.component.html
@@ -1,7 +1,7 @@
 <ion-content>
   <div class="container">
     <div class="header">
-      <ion-icon routerLink="../thrpy" class="arrow-left" name="chevron-back-outline"></ion-icon>
+      <ion-icon (click)="back()" class="arrow-left" name="chevron-back-outline"></ion-icon>
       <div>Settings</div>
     </div>
     <hr />
