--- a/src/app/baby-tracking/pages/dashboard/content/solids-tracking/solids-tracking.component.html
+++ b/src/app/baby-tracking/pages/dashboard/content/solids-tracking/solids-tracking.component.html
@@ -1,4 +1,4 @@
-<ion-content>
+<ion-content fullscreen>
   <div class="container">
     <div class="header">
       <ion-icon routerLink="../" class="arrow-left" name="chevron-back-outline"></ion-icon>
